--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -27,6 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - run: yarn install
+    - run: yarn -v
     - run: yarn nx run-many --parallel --all --target=test
     - run: yarn nx run-many --parallel --all --target=build
     - run: yarn nx run-many --parallel --all --target=lint
