--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,12 @@ jobs:
 #          version: 6.11.0
 #          run_install: true
       #      - run: npm install
-      - run: yarn nx-cloud start-ci-run
+      - run: npx nx-cloud start-ci-run
       - run: yarn nx affected --target=build --parallel --max-parallel=3 --prod
       - run: yarn nx affected --target=test --parallel --max-parallel=2
       - run: yarn nx affected --target=lint --parallel --max-parallel=2
 #      - run: pnpx nx affected --target=e2e --parallel --max-parallel=2 --headless
-      - run: yarn nx-cloud stop-all-agents
+      - run: npx nx-cloud stop-all-agents
   pr:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
@@ -71,12 +71,12 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
-      - run: yarn nx-cloud start-ci-run
+      - run: npx nx-cloud start-ci-run
       - run: yarn nx affected --target=build --parallel --max-parallel=3 --prod
       - run: yarn nx affected --target=test --parallel --max-parallel=2
       - run: yarn nx affected --target=lint --parallel --max-parallel=2
 #      - run: yarn nx affected --target=e2e --parallel --max-parallel=2 --headless
-      - run: yarn nx-cloud stop-all-agents
+      - run: npx nx-cloud stop-all-agents
   agents:
     runs-on: ubuntu-latest
     name: Agent 1
