--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -59,6 +59,7 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
+      - run: yarn install
       - run: yarn build
   test:
     runs-on: ubuntu-latest
@@ -82,6 +83,7 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
+      - run: yarn install
       - run: yarn test
   lint:
     runs-on: ubuntu-latest
@@ -106,7 +108,9 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
+      - run: yarn install
       - run: yarn lint
+
   e2e:
     runs-on: ubuntu-latest
     needs: [ 'setup' ]
@@ -130,4 +134,5 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
+#      - run: yarn install
 #      - run: yarn e2e
