--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
     "cypress": "^9.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
