--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "PORT=3334 pnpx nx  run be-api-service:serve & pnpx nx run be-api-service:serve & pnpx nx run fe-solid-app:serve",
-    "start": "nx serve",
+    "start": "nx serves",
     "build": "yarn nx run-many --target=build --parallel --max-parallel=4 --prod --all",
     "lint": "yarn nx run-many --target=lint --parallel --max-parallel=4 --all",
     "serve": "yarn nx run-many --target=serve --parallel --max-parallel=4 --all",
