--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
+    - uses: c-hive/gha-yarn-cache@v2
     - run: yarn install
     - run: yarn -v
     - run: yarn nx run-many --parallel --all --target=test
