--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16'
-      - uses: actions/checkout@v1
+      - uses: c-hive/gha-yarn-cache@v2
       #          cache: 'pnpm'
 #      - name: Cache pnpm modules
 #        uses: actions/cache@v2
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16'
-      - uses: actions/checkout@v1
+      - uses: c-hive/gha-yarn-cache@v2
 #      - name: Cache pnpm modules
 #        uses: actions/cache@v2
 #        with:
