--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -59,7 +59,7 @@ jobs:
 #        with:
 #          version: 6.11.0
 #          run_install: true
-      - run: yarn install
+#      - run: yarn install
       - run: yarn build
   test:
     runs-on: ubuntu-latest
