--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
-      - run: yarn install --prefer-offline --frozen-lockfile
+      - run: yarn install --frozen-lockfile
 #      - name: Cache pnpm modules
 #        uses: actions/cache@v2
 #        with:
