--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -57,9 +57,9 @@ jobs:
       - run: git config --global user.email krupnik.yuri@gmail.com && git config --global user.name yurikrupnik
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
       - run: npx nx-cloud start-ci-run
-      - run: yarn test -- --skip-nx-cache --verbose
-      - run: yarn build -- --skip-nx-cache --verbose
-      - run: yarn lint -- --skip-nx-cache --verbose
+      - run: yarn test # -- --skip-nx-cache --verbose
+      - run: yarn build # -- --skip-nx-cache --verbose
+      - run: yarn lint  # -- --skip-nx-cache --verbose
 #      - run: yarn e2e -- --skip-nx-cache --verbose
       - name: Stop agents
         run: npx nx-cloud stop-all-agents
